--- a/랜딩페이지/style.css
+++ b/랜딩페이지/style.css
@@ -308,8 +308,23 @@ header button{
     .footer-background{
         width: 100%;
         height: 340px;
-        background: url(/imges/img_5.jpg) no-repeat center / 100% auto;
+        background: url(img_5.jpg) no-repeat center / 100% auto;
         opacity: 50%;
+        .img-5,
+.img_5 * {
+  box-sizing: border-box;
+}
+.img_5 {
+  background: linear-gradient(
+    to left,
+    rgba(242, 233, 216, 0.6),
+    rgba(242, 233, 216, 0.6)
+  );
+  height: 340px;
+  position: relative;
+  object-fit: cover;
+}
+
         
     }
     footer{
@@ -347,7 +362,7 @@ header button{
    }
 
 }
-/* -------------------mabile version------------------- */
+/* -------------------mobile 버전------------------- */
 @media(max-width:390px){
     .wrap{
         display: flex;
@@ -592,7 +607,7 @@ header button{
         max-width: 390px;
         width: 100%;
         height: 241px;
-        background: url(/imges/img_5.jpg) no-repeat center / 100% auto;
+        background: url(img_5.jpg) no-repeat center / 100% auto;
         opacity: 50%;
         
     }
